welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLavant: Boolean){
var nbPas=0
if (versLavant()){
	for (i<- 1 to nbPas){
		avance();	
	}
}

}
